refactor: add instructions

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,12 @@
-API_KEY=""
-API_BASE_URL=""
-MODEL=""
+# Rename this file to .env
+# and fill in the following environment variables
+
+
+# API KEY for OpenAI
+API_KEY="<YOUR_API_KEY>"
+
+# Model to use for chat (e.g., gpt-4o, gpt-3.5-turbo)
+MODEL="gpt-4o"
+
+# Uncomment and set Base URL for OpenAI API if different from the default
+# API_BASE_URL="<YOUR_API_BASE_URL>"
