docs: update .env.template with usage instructions

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,37 @@
-# Rename this file to .env
-# and fill in the following environment variables
+# ======================================================
+# Project-Coder Environment Configuration Template
+# ======================================================
+#
+# HOW TO USE THIS FILE:
+# 1. Make a copy of this file and rename it to ".env"
+# 2. Replace the placeholder values with your actual credentials
+# 3. Keep your .env file secure and never share it publicly
 
+# ----------------------
+# REQUIRED SETTINGS
+# ----------------------
 
-# API KEY for OpenAI
+# Your OpenAI API key
 API_KEY="<YOUR_API_KEY>"
 
-# Model to use for chat (e.g., gpt-4o, gpt-3.5-turbo)
+# AI model to use for code generation and chat
+# More capable models may provide better results but cost more
 MODEL="gpt-4o"
 
-# Uncomment and set Base URL for OpenAI API if different from the default
+# ----------------------
+# OPTIONAL SETTINGS
+# ----------------------
+
+# Custom API endpoint (Uncomment if using Azure OpenAI or a proxy)
 # API_BASE_URL="<YOUR_API_BASE_URL>"
+
+# Maximum tokens to generate in responses (Uncomment to override default)
+# MAX_TOKENS=4096
+
+# Temperature (0.0-2.0, lower is more deterministic. Uncomment to override default)
+# TEMPERATURE=0.7
+
+# ----------------------
+# USAGE NOTES
+# ----------------------
+# - Be mindful of API rate limits and token usage to manage costs
