--- a/.env.template
+++ b/.env.template
@@ -6,32 +6,37 @@
 # 1. Make a copy of this file and rename it to ".env"
 # 2. Replace the placeholder values with your actual credentials
 # 3. Keep your .env file secure and never share it publicly
+# 
+# ----------------------
+# USAGE NOTES
+# ----------------------
+# - Be mindful of API rate limits and token usage to manage costs
+
+
 
 # ----------------------
 # REQUIRED SETTINGS
 # ----------------------
 
 # Your OpenAI API key
-API_KEY="<YOUR_API_KEY>"
-
-# AI model to use for code generation and chat
-# More capable models may provide better results but cost more
-MODEL="gpt-4o"
+OPENAI_API_KEY="<YOUR_API_KEY>"
 
 # ----------------------
 # OPTIONAL SETTINGS
 # ----------------------
 
 # Custom API endpoint (Uncomment if using Azure OpenAI or a proxy)
-# API_BASE_URL="<YOUR_API_BASE_URL>"
+# OPENAI_BASE_URL="<YOUR_API_BASE_URL>"
 
-# Maximum tokens to generate in responses (Uncomment to override default)
-# MAX_TOKENS=4096
+# AI model to use for code generation and chat
+# More capable models may provide better results but cost more
+# AM_DEFAULT_MODEL="gpt-4o"
 
 # Temperature (0.0-2.0, lower is more deterministic. Uncomment to override default)
-# TEMPERATURE=0.7
+# AM_DEFAULT_TEMPERATURE=0.5
 
-# ----------------------
-# USAGE NOTES
-# ----------------------
-# - Be mindful of API rate limits and token usage to manage costs
+# Maximum tokens to generate in responses (Uncomment to override default)
+# AM_MAX_TOKENS=4096
+
+# Top P nucleus sampling cutoff (0.0-1.0, higher is more diverse. Uncomment to override default)
+# AM_TOP_P=0.9
