docs: update environment configuration template and README

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 # ======================================================
-# Project-Coder Environment Configuration Template
+# AgileMind Environment Configuration Template
 # ======================================================
 #
 # HOW TO USE THIS FILE:
