--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
+mypy==1.15.0
+mypy-extensions==1.0.0
 openai==1.65.2
 pydantic==2.10.6
 pydantic_core==2.27.2
