--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,16 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
 mypy==1.15.0
 mypy-extensions==1.0.0
 openai==1.65.2
 pydantic==2.10.6
 pydantic_core==2.27.2
+Pygments==2.19.1
 python-dotenv==1.0.1
+rich==13.9.4
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
