--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 python-dotenv==1.0.1
+readchar==4.2.1
 rich==13.9.4
 sniffio==1.3.1
 tqdm==4.67.1
