--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 distro==1.9.0
 h11==0.14.0
 httpcore==1.0.7
@@ -17,7 +18,11 @@ pydantic_core==2.27.2
 Pygments==2.19.1
 python-dotenv==1.0.1
 readchar==4.2.1
+regex==2024.11.6
+requests==2.32.3
 rich==13.9.4
 sniffio==1.3.1
+tiktoken==0.9.0
 tqdm==4.67.1
 typing_extensions==4.12.2
+urllib3==2.3.0
