--- a/config.yaml
+++ b/config.yaml
@@ -7,16 +7,20 @@ default:
 workflow:
   prototype:
     # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
     # model: "claude-3-7-sonnet-20250219"
 
   architecture:
     # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
     # model: "claude-3-7-sonnet-20250219"
   
   programming:
     # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
     # model: "claude-3-7-sonnet-20250219"
 
   debugging:
     # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
     # model: "claude-3-7-sonnet-20250219"
