docs: update env template and README

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+# ------------------------------------------------------------
+# Adjust API key, base URL, and model for each stage if needed
+# ------------------------------------------------------------
+
 default:
   llm:
     api_base_url: ${OPENAI_BASE_URL}
