--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 annotated-types==0.7.0
 anyio==4.8.0
 astroid==3.3.9
+beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 dill==0.3.9
 distro==1.9.0
+esprima==4.0.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -29,8 +31,11 @@ regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 sniffio==1.3.1
+soupsieve==2.6
 tiktoken==0.9.0
+tinycss2==1.4.0
 tomlkit==0.13.2
 tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+webencodings==0.5.1
