--- a/config.yaml
+++ b/config.yaml
@@ -6,25 +6,30 @@ default:
   llm:
     api_base_url: ${OPENAI_BASE_URL}
     api_key: ${OPENAI_API_KEY}
-    model: "claude-3-7-sonnet-20250219"
+    model: "gpt-4o"
 
 workflow:
   prototype:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "claude-3-7-sonnet-20250219"
+    # model: "gpt-4o"
 
   architecture:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "claude-3-7-sonnet-20250219"
+    # model: "gpt-4o"
   
   programming:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "claude-3-7-sonnet-20250219"
+    # model: "gpt-4o"
+
+  supervisor:
+    # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
+    # model: "gpt-4o"
 
   debugging:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "claude-3-7-sonnet-20250219"
+    # model: "gpt-4o"
