--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,11 @@ workflow:
     # api_key: ${OPENAI_API_KEY}
     # model: "o3-mini"
 
+  documentation:
+    # api_base_url: ${OPENAI_BASE_URL}
+    # api_key: ${OPENAI_API_KEY}
+    # model: "o3-mini"
+
   architecture:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
