chore: update pyproject.toml to add streamlit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,46 +14,77 @@ classifiers = [
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
 dependencies = [
+    "altair",
     "annotated-types",
     "anyio",
     "astroid",
+    "attrs",
     "beautifulsoup4",
+    "blinker",
+    "cachetools",
     "certifi",
     "charset-normalizer",
+    "click",
     "dill",
     "distro",
     "esprima",
+    "gitdb",
+    "GitPython",
     "h11",
     "httpcore",
     "httpx",
     "idna",
     "isort",
+    "Jinja2",
     "jiter",
+    "jsonschema",
+    "jsonschema-specifications",
     "markdown-it-py",
+    "MarkupSafe",
     "mccabe",
     "mdurl",
     "mypy",
     "mypy-extensions",
+    "narwhals",
+    "numpy",
     "openai",
+    "packaging",
+    "pandas",
+    "pillow",
     "platformdirs",
+    "protobuf",
+    "pyarrow",
     "pydantic",
     "pydantic_core",
+    "pydeck",
     "Pygments",
     "pylint",
+    "python-dateutil",
     "python-dotenv",
+    "pytz",
     "PyYAML",
     "readchar",
+    "referencing",
     "regex",
     "requests",
     "rich",
+    "rpds-py",
+    "six",
+    "smmap",
     "sniffio",
     "soupsieve",
+    "streamlit",
+    "tenacity",
     "tiktoken",
     "tinycss2",
+    "toml",
     "tomlkit",
+    "tornado",
     "tqdm",
     "typing_extensions",
+    "tzdata",
     "urllib3",
+    "watchdog",
     "webencodings",
 ]
 
