chore: update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,12 @@ dependencies = [
     "certifi",
     "charset-normalizer",
     "click",
+    "contourpy",
+    "cycler",
     "dill",
     "distro",
     "esprima",
+    "fonttools",
     "gitdb",
     "GitPython",
     "h11",
@@ -39,19 +42,23 @@ dependencies = [
     "jiter",
     "jsonschema",
     "jsonschema-specifications",
+    "kiwisolver",
     "markdown-it-py",
     "MarkupSafe",
+    "matplotlib",
     "mccabe",
     "mdurl",
     "mypy",
     "mypy-extensions",
     "narwhals",
+    "networkx",
     "numpy",
     "openai",
     "packaging",
     "pandas",
     "pillow",
     "platformdirs",
+    "plotly",
     "protobuf",
     "pyarrow",
     "pydantic",
@@ -59,10 +66,12 @@ dependencies = [
     "pydeck",
     "Pygments",
     "pylint",
+    "pyparsing",
     "python-dateutil",
     "python-dotenv",
     "pytz",
     "PyYAML",
+    "rdflib",
     "readchar",
     "referencing",
     "regex",
@@ -74,6 +83,7 @@ dependencies = [
     "sniffio",
     "soupsieve",
     "streamlit",
+    "streamlit-agraph",
     "tenacity",
     "tiktoken",
     "tinycss2",
