--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
 dill==0.3.9
 distro==1.9.0
 esprima==4.0.1
+fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.14.0
@@ -23,19 +26,23 @@ Jinja2==3.1.6
 jiter==0.8.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 mccabe==0.7.0
 mdurl==0.1.2
 mypy==1.15.0
 mypy-extensions==1.0.0
 narwhals==1.33.0
+networkx==3.4.2
 numpy==2.2.4
 openai==1.65.2
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 platformdirs==4.3.7
+plotly==6.0.1
 protobuf==5.29.4
 pyarrow==19.0.1
 pydantic==2.10.6
@@ -43,10 +50,12 @@ pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
 pylint==3.3.6
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.2
 PyYAML==6.0.2
+rdflib==7.1.4
 readchar==4.2.1
 referencing==0.36.2
 regex==2024.11.6
@@ -58,6 +67,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 streamlit==1.44.1
+streamlit-agraph==0.0.45
 tenacity==9.1.2
 tiktoken==0.9.0
 tinycss2==1.4.0
