--- a/config.yaml
+++ b/config.yaml
@@ -6,35 +6,35 @@ default:
   llm:
     api_base_url: ${OPENAI_BASE_URL}
     api_key: ${OPENAI_API_KEY}
-    model: "o3-mini"
+    model: "gpt-4o"
 
 workflow:
   prototype:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
 
   documentation:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
 
   architecture:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
   
   programming:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
 
   supervisor:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
 
   debugging:
     # api_base_url: ${OPENAI_BASE_URL}
     # api_key: ${OPENAI_API_KEY}
-    # model: "o3-mini"
+    # model: "gpt-4o"
